# clickassist

./: Cargo.toml  LICENSE  README.md  app.manifest  architecture-draft.md  build.rs  main.py
clickassist/: __init__.py
clickassist/platform/: __init__.py  backend.py  hotkey.py  key.py
clickassist/platform/impl/: __init__.py  linux_keycodes.py  wayland.py  windows.py
clickassist/ui/: keybind_dialog.py  main_window.py  mode.py  position_window.py
clickassist/utils/: constants.py
src/: app.rs  bindings.rs  config.rs  hook.rs  main.rs  overlay.rs  toolbar.rs  tooltip.rs  touch.rs  tray.rs  utils.rs  win.rs  window.rs
src/app/: constants.rs  mod.rs
src/touch/: cmd.rs  mod.rs  worker.rs
