[package]
name = "clickassist"
version = "0.1.0"
edition = "2024"

[dependencies]
winwrapper = { path = "winwrapper" }
windows-sys = { version = ">=0.61", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input_Pointer", "Win32_UI_Shell", "Win32_UI_HiDpi", "Win32_System_SystemServices"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winresource = "0.1"
